--- a/todoList/src/global.css
+++ b/todoList/src/global.css
@@ -1,5 +1,12 @@
-/* *{
-    margin: 0px;
-    padding: 0px;
+*{
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
-} */
+}
+
+body, input, button{
+    font-size: 16px;
+    font-family: "Roboto", sans-serif;
+
+    --webkit-font-smoothing: antialiased;
+}
