--- a/todoList/src/views/home/style.css
+++ b/todoList/src/views/home/style.css
@@ -1,6 +1,66 @@
 .container{
 
-    margin: auto;
-    max-width: 900px;
-    margin-top: 20px
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+
+.container header{
+    margin: 84px 0 24px;
+    width: 50%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.container header img{
+    width: 70px;
+    height: 70px;
+    border-radius: 30px;
+    margin-left: 7px;
+}
+
+.container header div{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.container input{
+    width: 50%;
+    padding: 24px;
+
+    background-color: #e6e6e6;
+    border-radius: 5px;
+    border: none;
+
+    font-size: 16px;
+
+
+}
+
+
+.container button{
+    width: 50%;
+    padding: 24px;
+    font-weight: 700;
+    background: #ea4c89;
+    color: #ffff;
+
+    border-radius: 5px;
+
+    margin: 12px 0 84px;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
+    transition: filter 0.2s;
+}
+
+.container button:hover{
+    filter: brightness(0.9);
+}
+
+.btn{
+    margin: 10px;
 }
