--- a/todoList/src/componentes/list/style.css
+++ b/todoList/src/componentes/list/style.css
@@ -6,12 +6,25 @@ img{
     text-decoration: line-through;
 }
 
-.container ul li {
+.container ul{
+    width: 80%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
 }
 
-.btn{
-    margin: 10px;
+.container ul button{
+    width: 50%;
+    
+   
 }
+
+.container li {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 30px;
+    width: 70%;
+}
+
