--- a/todoList/src/componentes/list/style.css
+++ b/todoList/src/componentes/list/style.css
@@ -7,17 +7,13 @@ img{
 }
 
 .container ul{
-    width: 80%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.container ul button{
-    width: 50%;
-    
-   
-}
+
 
 .container li {
     display: flex;
@@ -25,6 +21,19 @@ img{
     align-items: center;
     justify-content: space-between;
     font-size: 30px;
-    width: 70%;
+    width: 100%;
+    padding: 15px;
+}
+
+
+.div-btn-lista {
+    display: flex;
+    justify-content: space-around;
+    width: 30%;
+}
+
+.div-btn-lista button{
+    width: 45%;
+    
 }
 
